wallet_core/tests_integration/tests/snapshots/gba_pid@999991838.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 999991838"
expression: attributes
---
com.example.pid__given_name:
  String: Patrick
com.example.pid__family_name:
  String: Braveheart
com.example.pid__own_family_name:
  String: Braveheart
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 1993-12-26
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999991838"
com.example.address__resident_street:
  String: Slaghekstraat
com.example.address__resident_house_number:
  String: "5"
com.example.address__resident_postal_code:
  String: 3074LA
com.example.address__resident_city:
  String: Rotterdam
com.example.address__resident_country:
  String: Nederland
