wallet_core/tests_integration/tests/snapshots/gba_pid@999992120.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999992120"
expression: attributes
---
given_name:
  String: Zeus
family_name:
  String: de Jager
own_family_name:
  String: de Jager
gender:
  Gender: Male
birth_date:
  Date: 2003-12-31
age_over_18:
  Boolean: true
has_spouse_or_partner:
  Boolean: false
bsn:
  String: "999992120"
resident_street:
  String: Leyweg
resident_house_number:
  String: "1485"
resident_postal_code:
  String: 2548AE
resident_city:
  String: "'s-Gravenhage"
resident_country:
  String: Nederland
