wallet_core/tests_integration/tests/snapshots/gba_pid@999992636.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 158
description: "BSN: 999992636"
expression: attributes
---
given_name:
  String: Bruno
family_name:
  String: Larussen
own_family_name:
  String: Larussen
gender:
  Gender: Male
birth_date:
  Date: 2001-01-23
age_over_18:
  Boolean: true
has_spouse_or_partner:
  Boolean: false
bsn:
  String: "999992636"
resident_street:
  String: Plataanlaan
resident_house_number:
  String: "4"
resident_postal_code:
  String: 3224TT
resident_city:
  String: Hellevoetsluis
resident_country:
  String: Nederland
