wallet_core/tests_integration/tests/snapshots/gba_pid@999992880.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 999992880"
expression: attributes
---
com.example.pid__given_name:
  String: Mieke
com.example.pid__family_name:
  String: Muis
com.example.pid__own_family_name:
  String: Muis
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1949-05-16
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999992880"
com.example.address__resident_street:
  String: Eemhavenweg
com.example.address__resident_house_number:
  String: "20"
com.example.address__resident_postal_code:
  String: 3089KG
com.example.address__resident_city:
  String: Rotterdam
com.example.address__resident_country:
  String: Nederland
