wallet_core/tests_integration/tests/snapshots/gba_pid@999992958.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 184
description: "BSN: 999992958"
expression: attributes
---
com.example.pid__given_name:
  String: Anita
com.example.pid__family_name:
  String: van Buren
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1969-12-15
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999992958"
com.example.address__resident_street:
  String: Bijlmerplein
com.example.address__resident_house_number:
  String: "550"
com.example.address__resident_postal_code:
  String: 1102DS
com.example.address__resident_city:
  String: Amsterdam
com.example.address__resident_country:
  String: Nederland
