wallet_core/tests_integration/tests/snapshots/gba_pid@999992983.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999992983"
expression: attributes
---
com.example.pid__given_name:
  String: Mina
com.example.pid__family_name:
  String: Dobbelsteen
com.example.pid__own_family_name:
  String: Dobbelsteen
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1999-03-05
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "999992983"
com.example.address__resident_street:
  String: Poolsestraat
com.example.address__resident_house_number:
  String: "36"
com.example.address__resident_postal_code:
  String: 3028EN
com.example.address__resident_city:
  String: Rotterdam
com.example.address__resident_country:
  String: Nederland
