wallet_core/tests_integration/tests/snapshots/gba_pid@999993215.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 999993215"
expression: attributes
---
com.example.pid__given_name:
  String: Bernard
com.example.pid__family_name:
  String: Schoon
com.example.pid__own_family_name:
  String: Schoon
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 1971-07-28
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999993215"
com.example.address__resident_street:
  String: Polderweg
com.example.address__resident_house_number:
  String: "92"
com.example.address__resident_postal_code:
  String: 1093KP
com.example.address__resident_city:
  String: Amsterdam
com.example.address__resident_country:
  String: Nederland
